# cppunit-money-example-cmake

./: .gitignore  LICENCE.txt  README.txt  oos-build.sh
code/: CMakeLists.txt  clean_cmake_files.sh
code/include/: CMakelists.txt  Money.hpp  yo.h
code/include_test/: CMakeLists.txt  MoneyTest.hpp
code/src/: CMakeLists.txt
code/src/app/: CMakeLists.txt  hello.c  run_app.cpp
code/src/libmoney/: CMakeLists.txt  Money.cpp
code/src/libyo/: CMakeLists.txt  yo.c
code/src_test/: CMakeLists.txt
code/src_test/app/: CMakeLists.txt  CTestTestfile.cmake  run_tests.cpp
code/src_test/libmoney_test/: CMakeLists.txt  MoneyTest.cpp
org/: plan.org  tasks.org
